[gd_scene load_steps=4 format=3 uid="uid://ngq3wbnr5uin"]

[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/graph_dialog_system/theme/main_theme.tres" id="1_coxnc"]
[ext_resource type="Texture2D" uid="uid://cctr0cmrj70nc" path="res://addons/graph_dialog_system/icons/Remove.svg" id="1_s7m46"]
[ext_resource type="Script" path="res://addons/graph_dialog_system/editor/components/scripts/locale_field.gd" id="2_edy3j"]

[node name="LocaleField" type="MarginContainer"]
size_flags_horizontal = 3
theme = ExtResource("1_coxnc")
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("2_edy3j")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7

[node name="CodeInput" type="LineEdit" parent="Container"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Locale code..."

[node name="LanguageDropdown" type="OptionButton" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "(no one)"

[node name="CountryDropdown" type="OptionButton" parent="Container"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "(no one)"

[node name="RemoveButton" type="TextureButton" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_s7m46")
texture_pressed = ExtResource("1_s7m46")
texture_hover = ExtResource("1_s7m46")
texture_disabled = ExtResource("1_s7m46")
texture_focused = ExtResource("1_s7m46")
stretch_mode = 5

[node name="PopupSelector" type="PopupMenu" parent="."]
transient_to_focused = true
max_size = Vector2i(200, 200)

[connection signal="text_changed" from="Container/CodeInput" to="." method="_on_code_input_text_changed"]
[connection signal="text_submitted" from="Container/CodeInput" to="." method="_on_code_input_text_submitted"]
[connection signal="item_selected" from="Container/LanguageDropdown" to="." method="_on_language_dropdown_item_selected"]
[connection signal="item_selected" from="Container/CountryDropdown" to="." method="_on_country_dropdown_item_selected"]
[connection signal="pressed" from="Container/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="id_pressed" from="PopupSelector" to="." method="_on_popup_selector_id_pressed"]
